--- a/templates/index.html
+++ b/templates/index.html
@@ -9,12 +9,11 @@
       rel="stylesheet"
       href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css"
     />
-    <!-- Custom CSS -->
     <style>
       body {
-        font-family: "Space Mono", monospace; /* Serif font */
-        background-color: #e35d5b; /* Orangy-red background */
-        color: white; /* White text */
+        font-family: "Space Mono", monospace;
+        background-color: #e35d5b;
+        color: white;
       }
 
       .container {
@@ -31,30 +30,29 @@
       button,
       input,
       label {
-        margin: 5px 0; /* Spacing for form elements */
+        margin: 5px 0;
       }
 
       .btn-primary,
       .btn-success,
       .btn-info {
         background-color: white; /* White buttons */
-        color: #e35d5b; /* Text color */
+        color: #e35d5b;
         border: none;
       }
 
-      /* Adjustments for form elements */
       .form-control {
         background-color: #fde8e4; /* Light red background */
-        color: #e35d5b; /* Text color */
+        color: #e35d5b;
         border: 1px solid white;
       }
 
-      /* Style for the blockchain data display */
       .pre-scrollable {
         background-color: #fde8e4; /* Light red background */
-        color: #e35d5b; /* Text color */
+        color: #e35d5b;
       }
     </style>
+    <link rel="icon" href="mushie.jpg" type="image/jpg" />
   </head>
   <body>
     <div class="container my-4">
