--- a/src/theme/variables.css
+++ b/src/theme/variables.css
@@ -1,54 +1,54 @@
 :root {
-  --ion-color-primary: #3d7a5e;
-  --ion-color-primary-rgb: 61, 122, 94;
-  --ion-color-primary-contrast: #f6f3ea;
-  --ion-color-primary-contrast-rgb: 246, 243, 234;
-  --ion-color-primary-shade: #356a52;
-  --ion-color-primary-tint: #4c876e;
+  --ion-color-primary: #c34b5a;
+  --ion-color-primary-rgb: 195, 75, 90;
+  --ion-color-primary-contrast: #ffffff;
+  --ion-color-primary-contrast-rgb: 255, 255, 255;
+  --ion-color-primary-shade: #ac4250;
+  --ion-color-primary-tint: #ca5d6b;
 
-  --ion-color-secondary: #f4b000;
-  --ion-color-secondary-rgb: 244, 176, 0;
-  --ion-color-secondary-contrast: #0c0f0b;
-  --ion-color-secondary-contrast-rgb: 12, 15, 11;
-  --ion-color-secondary-shade: #d79a00;
-  --ion-color-secondary-tint: #f5b81a;
+  --ion-color-secondary: #f7c8c8;
+  --ion-color-secondary-rgb: 247, 200, 200;
+  --ion-color-secondary-contrast: #2b1a1a;
+  --ion-color-secondary-contrast-rgb: 43, 26, 26;
+  --ion-color-secondary-shade: #d9b0b0;
+  --ion-color-secondary-tint: #f8cfcf;
 
-  --ion-color-tertiary: #76e4b3;
-  --ion-color-tertiary-rgb: 118, 228, 179;
-  --ion-color-tertiary-contrast: #0b0f0c;
-  --ion-color-tertiary-contrast-rgb: 11, 15, 12;
-  --ion-color-tertiary-shade: #68c99d;
-  --ion-color-tertiary-tint: #84e7bb;
+  --ion-color-tertiary: #ffebe6;
+  --ion-color-tertiary-rgb: 255, 235, 230;
+  --ion-color-tertiary-contrast: #2b1a1a;
+  --ion-color-tertiary-contrast-rgb: 43, 26, 26;
+  --ion-color-tertiary-shade: #e0cec9;
+  --ion-color-tertiary-tint: #ffefe9;
 
-  --ion-color-success: #9be28a;
-  --ion-color-success-rgb: 155, 226, 138;
-  --ion-color-success-contrast: #0b0f0c;
-  --ion-color-success-contrast-rgb: 11, 15, 12;
-  --ion-color-success-shade: #89c87a;
-  --ion-color-success-tint: #a5e596;
+  --ion-color-success: #7bbf85;
+  --ion-color-success-rgb: 123, 191, 133;
+  --ion-color-success-contrast: #ffffff;
+  --ion-color-success-contrast-rgb: 255, 255, 255;
+  --ion-color-success-shade: #6ca877;
+  --ion-color-success-tint: #8cc690;
 
-  --ion-color-warning: #f4b000;
-  --ion-color-warning-rgb: 244, 176, 0;
-  --ion-color-warning-contrast: #0c0f0b;
-  --ion-color-warning-contrast-rgb: 12, 15, 11;
-  --ion-color-warning-shade: #d79a00;
-  --ion-color-warning-tint: #f5b81a;
+  --ion-color-warning: #ffcf9f;
+  --ion-color-warning-rgb: 255, 207, 159;
+  --ion-color-warning-contrast: #2b1a1a;
+  --ion-color-warning-contrast-rgb: 43, 26, 26;
+  --ion-color-warning-shade: #e0b78c;
+  --ion-color-warning-tint: #ffd4a9;
 
-  --ion-color-danger: #ff6f59;
-  --ion-color-danger-rgb: 255, 111, 89;
-  --ion-color-danger-contrast: #0c0f0b;
-  --ion-color-danger-contrast-rgb: 12, 15, 11;
-  --ion-color-danger-shade: #e0614e;
-  --ion-color-danger-tint: #ff7d6a;
+  --ion-color-danger: #e05b5b;
+  --ion-color-danger-rgb: 224, 91, 91;
+  --ion-color-danger-contrast: #ffffff;
+  --ion-color-danger-contrast-rgb: 255, 255, 255;
+  --ion-color-danger-shade: #c95151;
+  --ion-color-danger-tint: #e36c6c;
 
-  --ion-color-dark: #0f130f;
-  --ion-color-dark-rgb: 15, 19, 15;
-  --ion-color-dark-contrast: #f6f3ea;
-  --ion-color-dark-contrast-rgb: 246, 243, 234;
-  --ion-color-dark-shade: #0d110d;
-  --ion-color-dark-tint: #272c27;
+  --ion-color-dark: #2b1a1a;
+  --ion-color-dark-rgb: 43, 26, 26;
+  --ion-color-dark-contrast: #ffffff;
+  --ion-color-dark-contrast-rgb: 255, 255, 255;
+  --ion-color-dark-shade: #251616;
+  --ion-color-dark-tint: #3f2e2e;
 
-  --ion-background-color: #0c0f0b;
-  --ion-text-color: #f6f3ea;
-  --ion-card-background: rgba(19, 25, 21, 0.82);
+  --ion-background-color: #fff7f4;
+  --ion-text-color: #2b1a1a;
+  --ion-card-background: rgba(255, 255, 255, 0.86);
 }
